# OneAPI-MPI

./: CMakeLists copy.txt  CMakeLists.txt  Readme.md
src/: Broadcast.cpp  Chain.cpp  DevPtr.cpp  DynamicReceive.cpp  HelloWorld.cpp  Reduce.cpp  Scatter.cpp  SendReceive.cpp  main.cpp
